--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
     "vee-validate": "^2.1.0-beta.11",
-    "vue": "^2.5.17",
     "vue-events": "^3.1.0",
-    "vuetify": "^1.2.4",
-    "vuex": "^3.0.1"
+    "vuetify": "^1.2.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
@@ -34,5 +32,9 @@
     "sass-loader": "^7.0.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2"
+  },
+  "optionalDependencies": {
+    "vue": "^2.5.17",
+    "vuex": "^3.0.1"
   }
 }
